<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_show_available"
        android:title="@string/available"/>
    <item
        android:id="@+id/item_show_landed"
        android:title="@string/loaned"/>
    <item
        android:id="@+id/item_show_disposed"
        android:title="@string/disposed"/>
    <item
        android:id="@+id/item_show_all"
        android:title="@string/all"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/logout"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="Log out"/>

</menu>