<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/image_has_book"
            android:contentDescription="doesReaderHaveBook" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:text="@string/firstname"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="3dp"
                android:id="@+id/textView_firstname"/>

            <TextView
                android:text="@string/lastname"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/textView_lastname"/>
        </LinearLayout>
        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/textView_email"/>
    </LinearLayout>

</LinearLayout>