<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.loan.IssueBookFragment"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_readers"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Programmer's library" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5pt"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView_fill_the_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5pt"
                android:text="@string/fill_fields" />
            <TextView
                android:id="@+id/textView_choose_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_book" />
            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerBooksLoanFragment"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView_choose_reader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_reader" />
            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerReadersLoanFragment"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/textButton_issue_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:enabled="false"
                    android:text="Issue book"
                    android:textSize="15dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <Button
                android:id="@+id/textButton_issue_book_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Cancel"
                android:textSize="15dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>